--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     function criarLista(number){
         // O valor obtido!
         document.getElementById("number").innerHTML=number;
+        for(var i = 0; i < number; i++){
+        
+    
         // A lista vazia!
         var ul = document.getElementById("lista");
         // Criando apenas um item!
@@ -28,6 +31,7 @@
         li.classList.add("list-group-item","fas","fa-user");
         // Adicionando apenas um item!
         ul.appendChild(li);
+        }
     }
     /********************************************************************/
     /*
